# scale-car

./: README.md
install/: local_setup.sh  setup.sh
install/image_viewer/lib/image_viewer/: viewer
install/image_viewer/share/image_viewer/: package.sh
install/integration/share/integration/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pub_node/lib/pub_node/: publisher
log/: latest_build
src/: README.md  oled.py  test.ipynb
src/camera_node/: package.xml  setup.py
src/camera_node/image2motor/: lane_motor_bridge.py
src/camera_node/publisher/: camera_publisher.py
src/camera_node/subscriber/: child_zone_subscriber.py  lane_detection_subscriber.py  lane_motor_bridge.py  stop_line_subscriber.py
src/crosswalk_detector/: package.xml  setup.py
src/crosswalk_detector/crosswalk_detector/publisher/: crosswalk_detector.code-workspace  crosswalk_detector_node.py
src/image_viewer/: package.xml  setup.py
src/image_viewer/image_viewer/: viewer.py
src/integration/: package.xml  setup.py
src/joystick_control/: setup.cfg  setup.py
src/motor_controller/: setup.py
src/motor_controller/sub_node/: subscriber.py
src/pub_node/: setup.cfg  setup.py
src/pub_node_cpp/: CMakeLists.txt  package.xml
src/pub_node_cpp/src/: publisher.cpp
src/red_zone_detector/: package.xml  setup.py
src/red_zone_detector/red_zone_detector/: red_zone_detector_node.py
src/stop_line_detector/: package.xml  setup.py
src/stop_line_detector/stop_line_detector/publisher/: stop_line_detector_node.py
src/sub_node/: setup.cfg  setup.py
src/sub_node_cpp/: CMakeLists.txt
src/sub_node_cpp/src/: subscriber.cpp
(+43 files in other folders)
