<?xml version="1.0"?>
<package format="3">
  <name>red_zone_detector</name>
  <version>0.0.0</version>
  <description>Red zone detection node</description>
  <maintainer email="jin@example.com">진규</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>
